--- a/css/styles.css
+++ b/css/styles.css
@@ -1,443 +1,441 @@
-* {
-    margin: 0;
-    padding: 0;
+header {
+  background-color: black;
+  align-content: center;
+  min-height: 10vh;
 }
-html{
-    font-size: 62.5%;
+
+a {
+  text-decoration: none;
+  color: white;
 }
-.header{
-    background-color: black;
-    align-content: center;
-    min-height: 10vh;
+
+.navbar-brand {
+  color: white;
+  font-size: 18px;
+  font-family: "Bungee", cursive;
 }
-a{
-    text-decoration: none;
-    color: white;
+
+.nav-link {
+  color: grey;
+  font-size: 15px;
+  font-family: "Bungee", cursive;
 }
-.nav-link{
-    color: grey;
-    font-size: 15px;
-    font-family: 'Bungee', cursive;
-}
+
 .navbar-nav .nav-link.active, .navbar-nav .nav-link.show {
-    color: white;
+  color: white;
 }
-.navbar-brand{
-    color: white;
-    font-size: 18px;
-    font-family: 'Bungee', cursive;
-}
-.main{
-    background-image: url(../img/descarga.gif);
-    background-repeat: no-repeat;
-    background-size: cover;
-    object-fit: cover;
-    min-height: 80vh;
-}
-.title{
-    text-align: center;
-    font-size: 3rem;
-    padding: 25rem 0 0 0;
-    font-family: 'Bungee', cursive;
-    color: white;    
-}
-.title-sm{
-    text-align: center;
-    font-size: 20px;
-    padding: 50px 0 0 0;
-    font-family: 'Bungee', cursive;
-    color: white; 
-}
-.container{
-    text-align: center;
-}
-.fuentam{
-    text-align: center;
-    font-size: 2rem;
-    font-family: 'Bungee', cursive;
-    min-height: 10vh;
-    margin: 2rem 0 0 0;
-    color: white;
-}
-.mh{
-    min-height: 0;
-}
-.center{
-    text-align: center;
-    font-size: 2rem;
-    margin: 2rem 0 0 0;
-    color: white;
-}
-.footer{
-    background-color: black;
-    position: absolute;
-    width: 100%;
-    font-size: 1.5rem;
-    font-family: 'Bungee', cursive;
-    color: white;
-}
-.img-social{
-    height: 3rem;
-    width: 3rem;
-}
-.img-social2{
-    height: 3rem;
-    width: 4rem;
-}
-.contevid{
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    padding-bottom: 20px;
-}
-.video{
-    margin-top: 3rem;
-}
-.img-tamanio{
-    height: 25rem;
-    width: 40rem;
-}
-.nombre{
-    margin-left: 2rem;
-}
-.img-about{
-    padding: 3rem;
-}
-.img-center{
-    display: flex;
-    align-items: center;
-    justify-content: center;
-}
+
 .navbar-toggler {
-    padding: var(--bs-navbar-toggler-padding-y) var(--bs-navbar-toggler-padding-x);
-    font-size: var(--bs-navbar-toggler-font-size);
-    line-height: 1;
-    background-color: rgba(240, 248, 255, 0.205);
-    color: white;
+  padding: var(--bs-navbar-toggler-padding-y) var(--bs-navbar-toggler-padding-x);
+  font-size: var(--bs-navbar-toggler-font-size);
+  line-height: 1;
+  background-color: rgba(240, 248, 255, 0.205);
+  color: white;
 }
-.skill-title{
-    font-size: 15px;
-    font-family: 'Bungee', cursive;
-}
-.about-content-skills{
-    text-align: center;
-    font-size: 2rem;
-}
-.about-content-title{
-    font-weight: 700;
-    font-size: 2.8rem;
-    margin-top: 4rem ;
-    margin-bottom: 3rem;
-    color: white;
-}
-.skills {
+
+@media (min-width: 992px) {
+  .navbar-expand-lg .navbar-collapse {
     display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-    
+    flex-basis: auto;
+    justify-content: end;
+  }
+  .navbar-brand {
+    font-size: 20px;
+  }
+  .nav-link {
+    font-size: 18px;
+  }
 }
-.skills-skill {
-    padding: 1rem 2rem;
-    margin-bottom: 1.5rem;
-    margin-right: 1.5rem;
-    font-size: 1.6rem;
-    background: rgba(255, 255, 255, 0.884);
-    border-radius: 5px;
-    font-weight: 600;
-    color: #666;
+@media (min-width: 1200px) {
+  .navbar-brand {
+    font-size: 23px;
+  }
+  .nav-link {
+    font-size: 20px;
+  }
 }
-.button {
-    position: relative;
-    padding: 10px 20px;
-    border-radius: 7px;
-    border: 1px solid rgb(140, 22, 209);
-    font-size: 14px;
-    text-transform: uppercase;
-    font-weight: 600;
-    letter-spacing: 2px;
-    background: transparent;
-    color: #fff;
-    overflow: hidden;
-    box-shadow: 0 0 0 0 transparent;
-    -webkit-transition: all 0.2s ease-in;
-    -moz-transition: all 0.2s ease-in;
-    transition: all 0.2s ease-in;
+footer {
+  background-color: black;
+  min-height: 10vh;
+  width: 100%;
+  font-size: 1.5rem;
+  font-family: "Bungee", cursive;
+  color: white;
 }
-.button:hover {
-    background: rgb(135, 57, 236);
-    box-shadow: 0 0 30px 5px rgba(195, 60, 248, 0.815);
-    -webkit-transition: all 0.2s ease-out;
-    -moz-transition: all 0.2s ease-out;
-    transition: all 0.2s ease-out;
-    color: black;
+footer p {
+  margin: 0;
 }
 
-.button:hover::before {
-    -webkit-animation: sh02 0.5s 0s linear;
-    -moz-animation: sh02 0.5s 0s linear;
-    animation: sh02 0.5s 0s linear;
+.img-social, .img2 {
+  height: 3rem;
+  width: 3rem;
 }
 
-.button::before {
-    content: '';
-    display: block;
-    width: 0px;
-    height: 86%;
-    position: absolute;
-    top: 7%;
-    left: 0%;
-    opacity: 0;
-    background: #fff;
-    box-shadow: 0 0 50px 30px #fff;
-    -webkit-transform: skewX(-20deg);
-    -moz-transform: skewX(-20deg);
-    -ms-transform: skewX(-20deg);
-    -o-transform: skewX(-20deg);
-    transform: skewX(-20deg);
+.img2 {
+  width: 4rem;
+}
+
+@media (max-width: 379px) {
+  footer {
+    min-height: 12vh;
+  }
+}
+.main {
+  background-image: url(../img/descarga.gif);
+  background-repeat: no-repeat;
+  background-size: cover;
+  object-fit: cover;
+  min-height: 80vh;
+}
+
+.title, .center {
+  text-align: center;
+  font-size: 3rem;
+  padding: 25rem 0 0 0;
+  font-family: "Bungee", cursive;
+  color: white;
+}
+
+.fuentam {
+  text-align: center;
+  font-size: 2rem;
+  font-family: "Bungee", cursive;
+  min-height: 10vh;
+  margin: 2rem 0 0 0;
+  color: white;
+}
+
+.container {
+  text-align: center;
+}
+.container .button {
+  position: relative;
+  padding: 10px 20px;
+  border-radius: 7px;
+  border: 1px solid rgb(140, 22, 209);
+  font-size: 14px;
+  text-transform: uppercase;
+  font-weight: 600;
+  letter-spacing: 2px;
+  background: transparent;
+  color: #fff;
+  overflow: hidden;
+  box-shadow: 0 0 0 0 transparent;
+  -webkit-transition: all 0.2s ease-in;
+  -moz-transition: all 0.2s ease-in;
+  transition: all 0.2s ease-in;
+}
+.container .button:hover:hover {
+  background: rgb(135, 57, 236);
+  box-shadow: 0 0 30px 5px rgba(195, 60, 248, 0.815);
+  -webkit-transition: all 0.2s ease-out;
+  -moz-transition: all 0.2s ease-out;
+  transition: all 0.2s ease-out;
+  color: black;
+}
+.container .button:hover:hover:before {
+  -webkit-animation: sh02 0.5s 0s linear;
+  -moz-animation: sh02 0.5s 0s linear;
+  animation: sh02 0.5s 0s linear;
+}
+.container .button:hover:before {
+  content: "";
+  display: block;
+  width: 0px;
+  height: 86%;
+  position: absolute;
+  top: 7%;
+  left: 0%;
+  opacity: 0;
+  background: #fff;
+  box-shadow: 0 0 50px 30px #fff;
+  -webkit-transform: skewX(-20deg);
+  -moz-transform: skewX(-20deg);
+  -ms-transform: skewX(-20deg);
+  -o-transform: skewX(-20deg);
+  transform: skewX(-20deg);
+}
+.container .button:hover:active {
+  box-shadow: 0 0 0 0 transparent;
+  -webkit-transition: box-shadow 0.2s ease-in;
+  -moz-transition: box-shadow 0.2s ease-in;
+  transition: box-shadow 0.2s ease-in;
 }
 @keyframes sh02 {
-    from {
-        opacity: 0;
-        left: 0%;
-    }
+  from {
+    opacity: 0;
+    left: 0%;
+  }
+  50% {
+    opacity: 1;
+  }
+  to {
+    opacity: 0;
+    left: 100%;
+  }
+}
 
-    50% {
-        opacity: 1;
-    }
+.contevid {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding-bottom: 20px;
+}
+.contevid .video {
+  margin-top: 3rem;
+}
 
-    to {
-        opacity: 0;
-        left: 100%;
-    }
+.center {
+  font-size: 2rem;
+  margin: 2rem 0 0 0;
+  padding: 0;
+  font-family: inherit;
 }
-.centro{
-    display: flex;
-    justify-content: center;
+
+.padb {
+  padding-bottom: 2rem;
 }
-.padb{
-    padding-bottom: 20px;
+
+.skill-title {
+  font-size: 10px;
+  font-family: "Bungee", cursive;
 }
-.button:active {
-    box-shadow: 0 0 0 0 transparent;
-    -webkit-transition: box-shadow 0.2s ease-in;
-    -moz-transition: box-shadow 0.2s ease-in;
-    transition: box-shadow 0.2s ease-in;
+
+.about-content-skills {
+  text-align: center;
+  font-size: 2rem;
 }
+
+.about-content-title {
+  font-weight: 700;
+  font-size: 2.8rem;
+  margin-top: 4rem;
+  margin-bottom: 3rem;
+  color: white;
+}
+
+.skills {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+}
+
+.skills-skill {
+  padding: 1rem 2rem;
+  margin-bottom: 1.5rem;
+  margin-right: 1.5rem;
+  font-size: 1.6rem;
+  background: rgba(255, 255, 255, 0.884);
+  border-radius: 5px;
+  font-weight: 600;
+  color: #666;
+}
+
 .form {
-    display: flex;
-    flex-direction: column;
-    gap: 10px;
-    max-width: 350px;
-    background-color: #020202;
-    padding: 20px;
-    border-radius: 10px;
-    position: relative;
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+  max-width: 350px;
+  background-color: #020202;
+  padding: 20px;
+  border-radius: 10px;
+  position: relative;
+}
+.form label {
+  position: relative;
+}
+.form label .input {
+  width: 100%;
+  padding: 10px 10px 20px 10px;
+  outline: 0;
+  border: 1px solid rgba(105, 105, 105, 0.397);
+  border-radius: 5px;
+}
+.form label .input + span {
+  position: absolute;
+  left: 10px;
+  top: 15px;
+  color: grey;
+  font-size: 0.9em;
+  cursor: text;
+  transition: 0.3s ease;
+}
+.form label .input:placeholder-shown + span {
+  top: 15px;
+  font-size: 0.9em;
+}
+.form label .input:valid + span {
+  color: green;
+}
+.form label .input01 + span {
+  position: absolute;
+  left: 10px;
+  top: 40px;
+  color: grey;
+  font-size: 0.9em;
+  cursor: text;
+  transition: 0.3s ease;
+}
+.form label .input01:placeholder-shown + span {
+  top: 40px;
+  font-size: 0.9em;
+}
+.form label .input01:valid + span {
+  color: green;
 }
 
 .message {
-    color: rgba(88, 87, 87, 0.822);
-    font-size: 14px;
+  color: rgba(88, 87, 87, 0.822);
+  font-size: 14px;
 }
 
 .flex {
-    display: flex;
-    width: 100%;
-    gap: 6px;
+  display: flex;
+  width: 100%;
+  gap: 6px;
 }
 
-.form label {
-    position: relative;
-}
-
-.form label .input {
-    width: 100%;
-    padding: 10px 10px 20px 10px;
-    outline: 0;
-    border: 1px solid rgba(105, 105, 105, 0.397);
-    border-radius: 5px;
-}
-
-.form label .input + span {
-    position: absolute;
-    left: 10px;
-    top: 15px;
-    color: grey;
-    font-size: 0.9em;
-    cursor: text;
-    transition: 0.3s ease;
-}
-
-.form label .input:placeholder-shown + span {
-    top: 15px;
-    font-size: 0.9em;
-}
-
-.form label .input:focus + span,.form label .input:valid + span {
-    top: 30px;
-    font-size: 0.7em;
-    font-weight: 600;
-}
-
-.form label .input:valid + span {
-    color: green;
+.form label .input:focus + span, .form label .input:valid + span {
+  top: 30px;
+  font-size: 0.7em;
+  font-weight: 600;
 }
 
 .input01 {
-    width: 100%;
-    padding: 10px 10px 20px 10px;
-    outline: 0;
-    border: 1px solid rgba(105, 105, 105, 0.397);
-    border-radius: 5px;
+  width: 100%;
+  padding: 10px 10px 20px 10px;
+  outline: 0;
+  border: 1px solid rgba(105, 105, 105, 0.397);
+  border-radius: 5px;
 }
 
-.form label .input01 + span {
-    position: absolute;
-    left: 10px;
-    top: 40px;
-    color: grey;
-    font-size: 0.9em;
-    cursor: text;
-    transition: 0.3s ease;
-}
-
-.form label .input01:placeholder-shown + span {
-    top: 40px;
-    font-size: 0.9em;
-}
-
-.form label .input01:focus + span,.form label .input01:valid + span {
-    top: 50px;
-    font-size: 0.7em;
-    font-weight: 600;
-}
-
-.form label .input01:valid + span {
-    color: green;
+.form label .input01:focus + span, .form label .input01:valid + span {
+  top: 50px;
+  font-size: 0.7em;
+  font-weight: 600;
 }
 
 .fancy {
-    background-color: transparent;
-    border: 2px solid #cacaca;
-    border-radius: 0px;
-    box-sizing: border-box;
-    color: #fff;
-    cursor: pointer;
-    display: inline-block;
-    font-weight: 390;
-    letter-spacing: 2px;
-    margin: 0;
-    outline: none;
-    overflow: visible;
-    padding: 8px 30px;
-    position: relative;
-    text-align: center;
-    text-decoration: none;
-    text-transform: none;
-    transition: all 0.3s ease-in-out;
-    user-select: none;
-    font-size: 13px;
+  background-color: transparent;
+  border: 2px solid #cacaca;
+  border-radius: 0px;
+  box-sizing: border-box;
+  color: #fff;
+  cursor: pointer;
+  display: inline-block;
+  font-weight: 390;
+  letter-spacing: 2px;
+  margin: 0;
+  outline: none;
+  overflow: visible;
+  padding: 8px 30px;
+  position: relative;
+  text-align: center;
+  text-decoration: none;
+  text-transform: none;
+  transition: all 0.3s ease-in-out;
+  user-select: none;
+  font-size: 13px;
 }
-
 .fancy::before {
-    content: " ";
-    width: 1.7rem;
-    height: 2px;
-    background: #cacaca;
-    top: 50%;
-    left: 1.5em;
-    position: absolute;
-    transform: translateY(-50%);
-    transform: translateX(230%);
-    transform-origin: center;
-    transition: background 0.3s linear, width 0.3s linear;
+  content: " ";
+  width: 1.7rem;
+  height: 2px;
+  background: #cacaca;
+  top: 50%;
+  left: 1.5em;
+  position: absolute;
+  transform: translateY(-50%);
+  transform: translateX(230%);
+  transform-origin: center;
+  transition: background 0.3s linear, width 0.3s linear;
 }
-
 .fancy .text {
-    font-size: 1.125em;
-    line-height: 1.33333em;
-    padding-left: 2em;
-    display: block;
-    text-align: left;
-    transition: all 0.3s ease-in-out;
-    text-transform: lowercase;
-    text-decoration: none;
-    color: #818181;
-    transform: translateX(30%);
+  font-size: 1.125em;
+  line-height: 1.33333em;
+  padding-left: 2em;
+  display: block;
+  text-align: left;
+  transition: all 0.3s ease-in-out;
+  text-transform: lowercase;
+  text-decoration: none;
+  color: #818181;
+  transform: translateX(30%);
 }
-
 .fancy .top-key {
-    height: 2px;
-    width: 1.5625rem;
-    top: -2px;
-    left: 0.625rem;
-    position: absolute;
-    background: white;
-    transition: width 0.5s ease-out, left 0.3s ease-out;
+  height: 2px;
+  width: 1.5625rem;
+  top: -2px;
+  left: 0.625rem;
+  position: absolute;
+  background: white;
+  transition: width 0.5s ease-out, left 0.3s ease-out;
 }
-
 .fancy .bottom-key-1 {
-    height: 2px;
-    width: 1.5625rem;
-    right: 1.875rem;
-    bottom: -2px;
-    position: absolute;
-    background: white;
-    transition: width 0.5s ease-out, right 0.3s ease-out;
+  height: 2px;
+  width: 1.5625rem;
+  right: 1.875rem;
+  bottom: -2px;
+  position: absolute;
+  background: white;
+  transition: width 0.5s ease-out, right 0.3s ease-out;
 }
-
 .fancy .bottom-key-2 {
-    height: 2px;
-    width: 0.625rem;
-    right: 0.625rem;
-    bottom: -2px;
-    position: absolute;
-    background: white;
-    transition: width 0.5s ease-out, right 0.3s ease-out;
+  height: 2px;
+  width: 0.625rem;
+  right: 0.625rem;
+  bottom: -2px;
+  position: absolute;
+  background: white;
+  transition: width 0.5s ease-out, right 0.3s ease-out;
 }
-
 .fancy:hover {
-    color: white;
-    background: #cacaca;
+  color: white;
+  background: #cacaca;
 }
-
 .fancy:hover::before {
-    width: 1.5rem;
-    background: white;
+  width: 1.5rem;
+  background: white;
 }
-
 .fancy:hover .text {
-    color: white;
-    padding-left: 1.5em;
+  color: white;
+  padding-left: 1.5em;
 }
-
 .fancy:hover .top-key {
-    left: -2px;
-    width: 0px;
+  left: -2px;
+  width: 0px;
 }
 
 .fancy:hover .bottom-key-1,
 .fancy:hover .bottom-key-2 {
-    right: 0;
-    width: 0;
+  right: 0;
+  width: 0;
 }
-@media (min-width: 992px){
-.navbar-expand-lg .navbar-collapse {
-    display: flex;
-    flex-basis: auto;
-    justify-content: end;
+
+.centro {
+  display: flex;
+  justify-content: center;
 }
-.navbar-brand{
-    font-size: 20px;
+
+.img-tamanio {
+  height: 25rem;
+  width: 40rem;
+  padding-bottom: 3rem;
 }
-.nav-link{
-    font-size: 18px;
+
+@media (max-width: 409px) {
+  .img-tamanio {
+    height: 20rem;
+    width: 30rem;
+  }
 }
+* {
+  margin: 0;
+  padding: 0;
 }
-@media (min-width: 1200px){
-    .navbar-brand{
-        font-size: 23px;
-    }
-    .nav-link{
-        font-size: 20px;
-    }
+
+html {
+  font-size: 62.5%;
 }
+
+/*# sourceMappingURL=styles.css.map */
