--- a/sass/_about.scss
+++ b/sass/_about.scss
@@ -1,30 +1,147 @@
-.skill-title{
+.skill-title {
     font-size: 10px;
     font-family: 'Bungee', cursive;
 }
-.about-content-skills{
+
+.about-content-skills {
     text-align: center;
     font-size: 2rem;
 }
-.about-content-title{
+
+.about-content-title {
     font-weight: 700;
     font-size: 2.8rem;
-    margin-top: 4rem ;
+    margin-top: 4rem;
     margin-bottom: 3rem;
     color: white;
 }
+
 .skills {
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
+    gap: 1rem;
 }
+
 .skills-skill {
     padding: 1rem 2rem;
-    margin-bottom: 1.5rem;
-    margin-right: 1.5rem;
+    margin: 2rem 2rem;
     font-size: 1.6rem;
     background: rgba(255, 255, 255, 0.884);
     border-radius: 5px;
     font-weight: 600;
     color: #666;
+}
+.contbut{
+    padding-top: 5rem;
+}
+
+.button2,
+.button2::after {
+    padding: 10px 50px;
+    font-size: 20px;
+    border: 1px solid rgba(140, 22, 209, 0.637);
+    border-radius: 5px;
+    color: white;
+    background-color: transparent;
+    position: relative;
+}
+
+.button2 {
+    &::after {
+        --move1: inset(50% 50% 50% 50%);
+        --move2: inset(31% 0 40% 0);
+        --move3: inset(39% 0 15% 0);
+        --move4: inset(45% 0 40% 0);
+        --move5: inset(45% 0 6% 0);
+        --move6: inset(14% 0 61% 0);
+        clip-path: var(--move1);
+        content: 'a./$;09';
+        position: absolute;
+        top: 0;
+        left: 0;
+        right: 0;
+        bottom: 0;
+        display: block;
+    }
+
+    &:hover {
+        text-shadow: -1px -1px 0px #fa27ef, 1px 1px 0px #E94BE8;
+        background-color: transparent;
+        border: 1px solid rgb(253, 7, 241);
+        box-shadow: 0px 10px 10px -10px rgb(206, 0, 189);
+
+        &::after {
+            animation: glitch_4011 1s;
+            text-shadow: 10 10px 10px black;
+            animation-timing-function: steps(2, end);
+            text-shadow: -3px -3px 0px #1df2f0, 3px 3px 0px #E94BE8;
+            background-color: transparent;
+            border: 3px solid rgb(0, 255, 213);
+        }
+    }
+}
+
+@keyframes glitch_4011 {
+    0% {
+        clip-path: var(--move1);
+        transform: translate(0px, -10px);
+    }
+
+    10% {
+        clip-path: var(--move2);
+        transform: translate(-10px, 10px);
+    }
+
+    20% {
+        clip-path: var(--move3);
+        transform: translate(10px, 0px);
+    }
+
+    30% {
+        clip-path: var(--move4);
+        transform: translate(-10px, 10px);
+    }
+
+    40% {
+        clip-path: var(--move5);
+        transform: translate(10px, -10px);
+    }
+
+    50% {
+        clip-path: var(--move6);
+        transform: translate(-10px, 10px);
+    }
+
+    60% {
+        clip-path: var(--move1);
+        transform: translate(10px, -10px);
+    }
+
+    70% {
+        clip-path: var(--move3);
+        transform: translate(-10px, 10px);
+    }
+
+    80% {
+        clip-path: var(--move2);
+        transform: translate(10px, -10px);
+    }
+
+    90% {
+        clip-path: var(--move4);
+        transform: translate(-10px, 10px);
+    }
+
+    100% {
+        clip-path: var(--move1);
+        transform: translate(0);
+    }
+}
+@media (max-width: 1300px){
+    .button2{
+        border: 1px solid rgba(140, 22, 209, 0.541);
+        background-color: black;
+        color: white;
+    }
 }
