--- a/css/styles.css
+++ b/css/styles.css
@@ -29,8 +29,9 @@ a {
   padding: var(--bs-navbar-toggler-padding-y) var(--bs-navbar-toggler-padding-x);
   font-size: var(--bs-navbar-toggler-font-size);
   line-height: 1;
-  background-color: rgba(240, 248, 255, 0.205);
+  background-color: rgb(0, 0, 0);
   color: white;
+  border: 1px solid white;
 }
 
 .navbar-nav {
@@ -39,6 +40,10 @@ a {
 
 .navbar-brand:hover {
   color: rgb(250, 249, 250);
+}
+
+.navbar-toggler-icon {
+  background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 30 30'%3e%3cpath stroke='rgba%28255, 255, 255, 1%29' stroke-linecap='round' stroke-miterlimit='10' stroke-width='2' d='M4 7h22M4 15h22M4 23h22'/%3e%3c/svg%3e");
 }
 
 @media (min-width: 992px) {
@@ -212,6 +217,7 @@ footer p {
 
 .padb {
   padding-bottom: 2rem;
+  padding-top: 3rem;
 }
 
 .skill-title {
@@ -372,7 +378,7 @@ footer p {
   position: absolute;
   left: 10px;
   top: 15px;
-  color: grey;
+  color: rgb(100, 99, 99);
   font-size: 0.9em;
   cursor: text;
   transition: 0.3s ease;
@@ -382,13 +388,13 @@ footer p {
   font-size: 0.9em;
 }
 .form label .input:valid + span {
-  color: green;
+  color: rgb(245, 245, 245);
 }
 .form label .input01 + span {
   position: absolute;
   left: 10px;
   top: 40px;
-  color: grey;
+  color: rgb(100, 99, 99);
   font-size: 0.9em;
   cursor: text;
   transition: 0.3s ease;
@@ -398,7 +404,7 @@ footer p {
   font-size: 0.9em;
 }
 .form label .input01:valid + span {
-  color: green;
+  color: rgb(255, 255, 255);
 }
 
 .message {
@@ -413,8 +419,8 @@ footer p {
 }
 
 .form label .input:focus + span, .form label .input:valid + span {
-  top: 30px;
-  font-size: 0.7em;
+  top: 17px;
+  font-size: 0.8em;
   font-weight: 600;
 }
 
@@ -427,8 +433,8 @@ footer p {
 }
 
 .form label .input01:focus + span, .form label .input01:valid + span {
-  top: 50px;
-  font-size: 0.7em;
+  top: 45px;
+  font-size: 0.8em;
   font-weight: 600;
 }
 
