--- a/sass/_contacto.scss
+++ b/sass/_contacto.scss
@@ -19,7 +19,7 @@
 				position: absolute;
 				left: 10px;
 				top: 15px;
-				color: grey;
+				color: rgb(100, 99, 99);
 				font-size: 0.9em;
 				cursor: text;
 				transition: 0.3s ease;
@@ -32,7 +32,7 @@
 			}
 			&:valid {
 				& + span {
-					color: green;
+					color: rgb(245, 245, 245);
 				}
 			}
 		}
@@ -41,7 +41,7 @@
 				position: absolute;
 				left: 10px;
 				top: 40px;
-				color: grey;
+				color: rgb(100, 99, 99);
 				font-size: 0.9em;
 				cursor: text;
 				transition: 0.3s ease;
@@ -54,7 +54,7 @@
 			}
 			&:valid {
 				& + span {
-					color: green;
+					color: rgb(255, 255, 255);
 				}
 			}
 		}
@@ -70,8 +70,8 @@
 	gap: 6px;
 }
 .form label .input:focus + span,.form label .input:valid + span {
-	top: 30px;
-	font-size: 0.7em;
+	top: 17px;
+	font-size: 0.8em;
 	font-weight: 600;
 }
 .input01 {
@@ -82,8 +82,8 @@
 	border-radius: 5px;
 }
 .form label .input01:focus + span,.form label .input01:valid + span {
-	top: 50px;
-	font-size: 0.7em;
+	top: 45px;
+	font-size: 0.8em;
 	font-weight: 600;
 }
 .fancy {
