--- a/sass/assets/_header.scss
+++ b/sass/assets/_header.scss
@@ -27,8 +27,9 @@ a{
     padding: var(--bs-navbar-toggler-padding-y) var(--bs-navbar-toggler-padding-x);
     font-size: var(--bs-navbar-toggler-font-size);
     line-height: 1;
-    background-color: rgba(240, 248, 255, 0.205);
+    background-color: rgb(0, 0, 0);
     @include text-color(white);
+    border: 1px solid white;
 }
 .navbar-nav {
     --bs-nav-link-hover-color: #f8f9fa;
@@ -36,6 +37,10 @@ a{
 .navbar-brand:hover {
     color: rgb(250, 249, 250);
 }
+.navbar-toggler-icon{
+    background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 30 30'%3e%3cpath stroke='rgba%28255, 255, 255, 1%29' stroke-linecap='round' stroke-miterlimit='10' stroke-width='2' d='M4 7h22M4 15h22M4 23h22'/%3e%3c/svg%3e");
+}
+
 
 @media (min-width: 992px){
     .navbar-expand-lg .navbar-collapse {
